--- a/index.html
+++ b/index.html
@@ -109,7 +109,10 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>About</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <p>Bachiller de Ingeniería de Sistemas, con liderazgo e iniciativa para el trabajo en equipo, asumiendo con eficacia y eficiencia 
+las labores encomendadas, facilidad de comunicación, con criterio para realizar análisis y solución de problemas, adaptable a 
+situaciones de cambio. Capacitado en las últimas tecnologías de Desarrollo de Sistemas, BI, Administración de Calidad, 
+Software de Virtualización VMware, Base de Datos Oracle, PostgreSQL 9.0, SQL Server entre otras. </p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
