--- a/index.html
+++ b/index.html
@@ -123,31 +123,35 @@ Software de Virtualización VMware, Base de Datos Oracle, PostgreSQL 9.0, SQL Se
           </div>
           <div class="col-lg-8 content">
             <h2>UI/UX Ingeniero de Sistemas &amp; Web Developer.</h2>
-            <p class="fst-italic py-3">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
-            </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 1995</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New York, USA</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>18 Agosto 1984</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://www.linkedin.com/in/mijailbenites/</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+51 989046744</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Lima, Perú</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>email@example.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>39</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachiller</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>mijail2108@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
               </div>
             </div>
             <p class="py-3">
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque.
+              INFORMÁTICA    
+        
+                1.Software de Ofimática (Avanzado):   
+                o Microsoft Office (Word, Excel, Project, Access), OpenOffice.   
+                2. Software de Programación:   
+                o Microsoft Visual Studio .Net (Visual Basic, C++). o SAP (Módulo FI, MM, PP), Matlab.   
+                3.Sistemas administradores de base de datos:   
+                o ORACLE 10G, PostgreSQL 9.0, MYSQL, MS SQL 2014.   
+                4.Software de Virtualización:    
+                o VMWare, Virtual Box.
             </p>
           </div>
         </div>
