--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ Software de Virtualización VMware, Base de Datos Oracle, PostgreSQL 9.0, SQL Se
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Resume</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <p>A continuación muestro el resumen de mi CV </p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -291,28 +291,103 @@ Software de Virtualización VMware, Base de Datos Oracle, PostgreSQL 9.0, SQL Se
             <h3 class="resume-title">Sumary</h3>
 
             <div class="resume-item pb-0">
-              <h4>Brandon Johnson</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
-              <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
-              </ul>
-            </div><!-- Edn Resume Item -->
-
-            <h3 class="resume-title">Education</h3>
-            <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
-            </div><!-- Edn Resume Item -->
-
-            <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              EXPERIENCIA LABORAL    
+Junio 2022 – Febrero 2023           
+PCM, Perú    
+Consultor PaaS, COMPUTACIÓN E INFORMÁTICA    
+Funciones:    
+1.Definir, supervisar y dar soporte a las pruebas de resiliencia y recuperación de los componentes de 
+la Plataforma PaaS    
+2.Validar la documentación generada por proveedores y asegurar que la misma se mantenga 
+actualizada y vigente durante todo el ciclo de vida de la Plataforma.    
+3.Definir plantillas de configuración de los distintos componentes y asegurar que cada uno sea 
+instalado de acuerdo a las mismas    
+4.Monitorear la capacidad y uso de la plataforma para prever ampliaciones necesarias de acuerdo al 
+uso actual y proyectado.    
+5.Elaborar los pliegos para la adquisición de nuevas licencias o servicios de soporte, ya sea por 
+continuidad o crecimiento de la infraestructura en capacidad o funciones.    
+6.Asegurar la realización de mantenimiento preventivo de los componentes de la Plataforma PaaS, 
+asegurando que cada uno se encuentre en óptimas condiciones de soporte y con las versiones de 
+software adecuadas de acuerdo a lo sugerido por el fabricante.    
+7.Documentar procedimientos de configuración y mantenimiento de los componentes de la 
+Plataforma PaaS.    
+Octubre 2021 – Diciembre 2021   INEI (Instituto Nacional de Estadística e Informàtica)     
+Informático de Local, COMPUTACIÓN E INFORMÁTICA    
+Funciones:    
+1.Configuración desde cero de la red de dispositivos informáticos (Tablets y Lector de Código de 
+Barras) utilizados para el registro de instrumentos de evaluación en el local.  
+2. Realizar la correcta cobertura del ingreso al local, el ingreso a cada aula del local y del inventario 
+de los instrumentos de evaluación.  
+3. Realizar el envío de la información a la sede central en tiempo real.  
+4.Supervisar y Monitorear el soporte informático en el local de aplicación.  
+5. Informar sobre las incidencias que se puedan presentar.  
+6. Responsable de dar la conformidad para el lacrado de los instrumentos de evaluación.  
+marzo 2018 – Octubre 2021     
+Propacking S.A.C, Perú    
+Desarrollador Web, COMPUTACIÓN E INFORMÁTICA    
+Funciones:    
+1   
+1.Diseñar la arquitectura de las aplicaciones o sitios de internet de la Empresa en C#.NET con base 
+de datos SQL Server 2014.    
+2.Seleccionar el mejor lenguaje de programación para las aplicaciones o sitios de internet.   
+3.Integrar los gráficos, el audio y el video en la aplicación o sitio web.   
+4.Realizar pruebas integrales para medir la calidad del sitio y detectar cualquier error presente en las 
+aplicaciones, utilizando para ello distintos exploradores.    
+5.Consultar con Diseñadores, Productores y clientes antes de avanzar con los Proyectos.   
+enero 2017 - abril 2017                
+DPCOMUNICACIONES, Perú    
+Analista de TI, COMPUTACIÓN E INFORMÁTICA  Funciones:    
+1.Realizar la migración de los Store Procedures y Funciones de SQL Server 2014 a Postgresql 9.0   
+2.Hacer Pruebas de Testing en Máquinas Virtuales con VMWARE y Ubuntu Linux sobre Postgresql  
+9.0   
+noviembre 2015 - noviembre 2016   LOGFIRE, Perú    
+Analista Cloud, ANÁLISIS Y SISTEMAS    
+Funciones:    
+1.Realizar estadísticas sobre el tiempo de las tareas del sistema WMS (Sistema de Gestión de 
+Distribución).    
+2.Programar en Python scripts para el mejor funcionamiento del sistema WMS.   
+3. Manejar la distribución de Linux Debian para corregir errores en la base de datos Oracle del Sistema.   
+marzo 2014 - octubre 2014     
+octubre 2012 - diciembre 2013         
+agosto 2011 - agosto 2012             
+MIDIS (Ministerio de Desarrollo e Inclusión Social), Perú   
+Analista de Base de Datos, TECNOLOGÍA DE LA INFORMACIÓN Funciones:    
+1. Emitir Reportes sobre la condición socio-económica que puedan tener los diferentes tipos 
+depobladores del ámbito Peruano.    
+2. Documentar los criterios asumidos por TI.   
+3. Mejorar los códigos SQL existentes actualmente en la Base de Datos.   
+4. Realizar Backups de la información de Producción hacia SISFOH.   
+JP PLANNING S.A.C (TSIS), Perú    
+Analista de Sistemas (Freelance), INFORMÁTICA Y SISTEMAS Funciones:    
+1.Modelado y Diseño de los Sistemas SINDRA (Sistema Base Integrada) y SIGPRE (Sistema de  
+Seguimiento de Proyectos) ambos basados en .NET 2010.    
+2.Creación de Procedimientos y Triggers (PL/SQL) en SQL Server 2008.   
+3.Gestionar el control, mantenimiento y seguimiento de los Proyectos de la Empresa.   
+4.Creación de los Manuales de Usuarios Final (.chm)   
+BPZ EXPLORACION & PRODUCCION S.R.L, Perú   
+Analista TI, Tecnología de la Información   Funciones:    
+1.Capacitar a los usuarios de Tumbes en el Sistema ERP IDEAS (Supply Chain Management).    
+2.Brindar soporte a los usuarios del Sistema ERP IDEAS.   
+3.Configurar el acceso de los usuarios al Sistema Sharepoint de la Empresa.   
+2   
+3   
+   
+4.Configurar la migración de las cuentas de correo de los usuarios (Outlook, Blackberry) hacia el 
+nuevo servidor de las cuentas de correo de la Empresa (BPZResources).   
+ 
+ 
+agosto 2010 - enero 2011    
+NORTH SOUTH STUDIOS, Perú   Analista, 
+Aseguramiento de la Calidad   Funciones:    
+1.Creación de Test Cases y Test Suites para Software especializado en Web-learning (CALMS).    
+2.Creación de Escenarios de Prueba para el Sistema CALMS de k12.   
+3.Hacer Pruebas de Regresión para descubrir nuevos bugs en el Sistema CALMS y generar 
+reportes Estadísticos de acuerdo con la Prioridad de los errores.    
+abril 2009 - diciembre 2009          MI BANCO, Perú    
+Analista Junior, Administración y Sistemas Funciones:    
+1.Mantenimiento de los perfiles de los usuarios en el Sistema.   
+2.Establecer los tipos de perfiles de los nuevos usuarios del Sistema.   
+3.Obtener estadísticas de los tipos de incidencias de los Usuarios. 
             </div><!-- Edn Resume Item -->
 
           </div>
