--- a/index.html
+++ b/index.html
@@ -675,7 +675,10 @@ Analista Junior, Administración y Sistemas Funciones:
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Testimonials</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>REFERENCIAS    
+            1.Maryory Díaz - Asistente de Gerencia (Propacking S.A.C) Cel: 934412384   
+            2.David Monge - Jefe de Equipo(LOGFIRE) Cel:991669634     
+            3.Clark Collantes- Admin BD(MIDIS) Cel: 998809119</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
